# energy-trading

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PROJECT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data-sources.md  findings.md  market-primer.md  prior-art.md
docs/sources/: energy-charts.md  entsoe.md  hydro.md  open-meteo.md
notebooks/: 01_dk1_dk2_spread.ipynb
scripts/: fetch_day_ahead.py
src/energy_markets/: __init__.py  config.py  zones.py
src/energy_markets/features/: __init__.py
src/energy_markets/ingest/: __init__.py  cache.py  energy_charts.py  entsoe.py  hydro.py  weather.py
src/energy_markets/plotting/: __init__.py  prices.py
src/energy_markets/transform/: __init__.py  spreads.py
tests/: test_spreads.py
vault/: Command Guide.md
vault/.obsidian/: app.json  community-plugins.json  graph.json  hotkeys.json
vault/2. Source Material/: Automated Intraday Trading in Power Markets.md
vault/5. Templates/: Full Note.md  Source Note.md
