[project]
name = "energy-markets"
version = "0.1.0"
description = "Personal, public-source research workspace for learning about energy markets and the data behind them."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "entsoe-py>=0.8.0",   # ENTSO-E client — the ingestion spine (MIT)
    "pandas>=2.2",
    "pyarrow>=16",        # parquet cache for data/raw
    "requests>=2.32",     # keyless REST sources (Open-Meteo, NVE, SMHI, energy-charts)
    "matplotlib>=3.9",
    "python-dotenv>=1.0", # load ENTSOE_API_KEY from .env
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energy_markets"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
